--- a/404.html
+++ b/404.html
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="https://atlas-group.cs.brown.edu/404.html" />
+  <link rel="canonical" href="https://atlas.cs.brown.edu/404.html" />
   
   
   
@@ -53,7 +53,7 @@
   <meta property="og:title" content="404 Page not found" />
 <meta property="og:description" content="Welcome Atlas Group." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://atlas-group.cs.brown.edu/404.html" />
+<meta property="og:url" content="https://atlas.cs.brown.edu/404.html" />
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
