--- a/contact/index.html
+++ b/contact/index.html
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="https://atlas-group.cs.brown.edu/contact/" />
+  <link rel="canonical" href="https://atlas.cs.brown.edu/contact/" />
   
   
   
@@ -53,7 +53,7 @@
   <meta property="og:title" content="" />
 <meta property="og:description" content="Research with us # Research is fun — especially when it&rsquo;s collaborative." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atlas-group.cs.brown.edu/contact/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://atlas.cs.brown.edu/contact/" /><meta property="article:section" content="" />
 
 
 
@@ -72,7 +72,7 @@
     
     "abstract": "Research with us # Research is fun — especially when it\u0026rsquo;s collaborative.",
     "inLanguage": "en",
-    "url" : "https:\/\/atlas-group.cs.brown.edu\/contact\/",
+    "url" : "https:\/\/atlas.cs.brown.edu\/contact\/",
     "author" : {
       "@type": "Person",
       "name": ""
