--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   
   
   
-  <link rel="canonical" href="https://atlas-group.cs.brown.edu/" />
+  <link rel="canonical" href="https://atlas.cs.brown.edu/" />
   
   <link rel="alternate" type="application/rss+xml" href="/index.xml" title="ATLAS Group" />
   
@@ -58,7 +58,7 @@
   <meta property="og:title" content="" />
 <meta property="og:description" content="Welcome Atlas Group." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://atlas-group.cs.brown.edu/" />
+<meta property="og:url" content="https://atlas.cs.brown.edu/" />
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content=""/>
@@ -69,11 +69,11 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "@id": "https:\/\/atlas-group.cs.brown.edu\/",
+    "@id": "https:\/\/atlas.cs.brown.edu\/",
     "name": "ATLAS Group",
     "description": "Welcome Atlas Group.",
     "inLanguage": "en",
-    "url": "https:\/\/atlas-group.cs.brown.edu\/",
+    "url": "https:\/\/atlas.cs.brown.edu\/",
     
     "publisher" : {
       "@type": "Person",
@@ -539,7 +539,7 @@ Jun'23: <a href="https://nikos.vasilak.is"   target="_blank">
 Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="_blank">
     BinWrap</a> to receive the distinguished-paper award at <a href="https://asiaccs2023.org/"   target="_blank">
     AsiaCCS'23</a>!</p>
-<p>See <a href="https://atlas-group.cs.brown.edu/news/"  >
+<p>See <a href="https://atlas.cs.brown.edu/news/"  >
     all news</a></p>
 <hr>
 <div id="team" class="anchor"></div>
@@ -552,7 +552,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 </h2>
 
 
-<div id="gallery-1-1702307356173293000">
+<div id="gallery-1-1702311141624014000">
   
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../anirudh.jpg" alt="Anirudh Narsipur" />
@@ -605,7 +605,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1702307356173293000').packery({
+    $('#gallery-1-1702311141624014000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
@@ -622,7 +622,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
     
 </h2>
 <img class="imgStuffResearch" src="../supply-chain.jpeg" alt="supply-chain" align="left"/> 
-<p><a href="https://atlas-group.cs.brown.edu/supply-chain/"  >
+<p><a href="https://atlas.cs.brown.edu/supply-chain/"  >
     Automating Protections Against Software Supply-Chain Threats
 </a><br>
 Modern software incorporates thousands of dependencies as a means of accelerating development and reducing cost—risking safety and security for both developers and end-users. We have built a series of systems targeting the JavaScript ecosystem—the largest such ecosystem out there—automating the analysis, transformation, and synthesis of JavaScript dependencies across a variety of threat models. Examples: <a href="http://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="_blank">
@@ -631,7 +631,7 @@ Modern software incorporates thousands of dependencies as a means of acceleratin
     CCS'21</a>.
 <br/><br/></p>
 <img class="imgStuffResearch" src="../systems.jpg" alt="systems" align="left"/> 
-<p><a href="https://atlas-group.cs.brown.edu/acceleration/"  >
+<p><a href="https://atlas.cs.brown.edu/acceleration/"  >
     Automating Acceleration and Scale-out of Software Systems</a><br>
 Language-agnostic programming environments hinder automated parallelization and distribution, often forcing developers that deal with large datasets to manually rewrite programs and their components in languages that support these features. We have built a series of systems that accelerate, parallelize, distribute, and scale out computations fully automatically — while maintaining key correctness and security guarantees. Our systems target widely used environments — e.g., JavaScript, Python, the Shell — and are offered by open-source consortia such as the Linux Foundation. Examples: <a href="http://nikos.vasilak.is/p/pash:nsdi:2023.pdf"   target="_blank">
     NSDI'23</a>, <a href="http://nikos.vasilak.is/p/pash:osdi:2022.pdf"   target="_blank">
@@ -639,7 +639,7 @@ Language-agnostic programming environments hinder automated parallelization and 
     EuroSys'21</a>.
 <br/><br/></p>
 <img class="imgStuffResearch" src="../microservices.png" alt="microservices" align="left"/> 
-<p><a href="https://atlas-group.cs.brown.edu/ssc/"  >
+<p><a href="https://atlas.cs.brown.edu/ssc/"  >
     Automated Transformation Towards Secure Scalable Computing Paradigms</a><br>
 Recent trends are pushing developers towards new paradigms of secure and scalable computing—e.g., confidential computing, microservices, serverless computing, and edge computing. Transforming a conventional program to leverage these paradigms is a laborious manual process that can lead to suboptimal performance and in many cases even break the program. We are developing systems that support this kind of decomposition and leveraging special hardware capabilities when these are available in the network. Examples: <a href="https://nikos.vasilak.is/p/themis:ares:2022.pdf"   target="_blank">
     ARES'22</a>, <a href="http://nikos.vasilak.is/p/ignis:pldi:2019.pdf"   target="_blank">
