--- a/publications/index.html
+++ b/publications/index.html
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="https://atlas-group.cs.brown.edu/publications/" />
+  <link rel="canonical" href="https://atlas.cs.brown.edu/publications/" />
   
   
   
@@ -53,7 +53,7 @@
   <meta property="og:title" content="" />
 <meta property="og:description" content="Peer-Reviewed Conference Publications # BinWrap: Hybrid Protection Against Native Node." />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atlas-group.cs.brown.edu/publications/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://atlas.cs.brown.edu/publications/" /><meta property="article:section" content="" />
 
 
 
@@ -72,7 +72,7 @@
     
     "abstract": "Peer-Reviewed Conference Publications # BinWrap: Hybrid Protection Against Native Node.",
     "inLanguage": "en",
-    "url" : "https:\/\/atlas-group.cs.brown.edu\/publications\/",
+    "url" : "https:\/\/atlas.cs.brown.edu\/publications\/",
     "author" : {
       "@type": "Person",
       "name": ""
