--- a/series/index.html
+++ b/series/index.html
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="https://atlas-group.cs.brown.edu/series/" />
+  <link rel="canonical" href="https://atlas.cs.brown.edu/series/" />
   
   <link rel="alternate" type="application/rss+xml" href="/series/index.xml" title="ATLAS Group" />
   
@@ -55,7 +55,7 @@
   <meta property="og:title" content="Series" />
 <meta property="og:description" content="Welcome Atlas Group." />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://atlas-group.cs.brown.edu/series/" />
+<meta property="og:url" content="https://atlas.cs.brown.edu/series/" />
 
   <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Series"/>
