--- a/team/index.html
+++ b/team/index.html
@@ -15,7 +15,7 @@
   
   
   
-  <link rel="canonical" href="https://atlas-group.cs.brown.edu/team/" />
+  <link rel="canonical" href="https://atlas.cs.brown.edu/team/" />
   
   
   
@@ -53,7 +53,7 @@
   <meta property="og:title" content="" />
 <meta property="og:description" content="Faculty # Nikos Vasilakis" />
 <meta property="og:type" content="article" />
-<meta property="og:url" content="https://atlas-group.cs.brown.edu/team/" /><meta property="article:section" content="" />
+<meta property="og:url" content="https://atlas.cs.brown.edu/team/" /><meta property="article:section" content="" />
 
 
 
@@ -72,7 +72,7 @@
     
     "abstract": "Faculty # Nikos Vasilakis",
     "inLanguage": "en",
-    "url" : "https:\/\/atlas-group.cs.brown.edu\/team\/",
+    "url" : "https:\/\/atlas.cs.brown.edu\/team\/",
     "author" : {
       "@type": "Person",
       "name": ""
