--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -601,9 +601,9 @@
             style="text-decoration-line: none !important;" href="#research-with-us" aria-label="Anchor">#</a></span>        
     
 </h2>
-<p>Research is fun — especially when it&rsquo;s collaborative. If you are a <em>current Brown student</em> of any level (e.g., undergraduate, masters, Ph.D.) please fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLSe9ahczyjU842toFlN1B6TD3bFSAol0JgvoQk3ITVxON6hUtA/viewform?usp=sf_link"   target="_blank">
+<p>Research is fun — especially when it&rsquo;s collaborative. If you are a <em>current Brown student</em> of any level (e.g., undergraduate, masters, Ph.D.) please fill out this <a href="https://forms.gle/2gohfbYGqh4bo9fq6"   target="_blank">
     form</a>  and consult the <a href="https://docs.google.com/document/d/1UXZKiQCRw1z4qKsVObGKYvxPvNs5gVlJNQpGbXRLvJ4/edit#heading=h.g2ngyg5a33sa"   target="_blank">
-    ATLAS onboarding &amp; resources</a> document (Brown-internal document). If you&rsquo;re interested in a 6–12 month research visit, please fill out this <a href="https://docs.google.com/forms/d/e/1FAIpQLSc-YCGnR_ydusYBUEICJc5777w9YTenp03L6e_v1Fj9BnooQQ/viewform?usp=sf_link"   target="_blank">
+    ATLAS onboarding &amp; resources</a> document (Brown-internal document). If you&rsquo;re interested in a 6–12 month research visit, please fill out this <a href="https://forms.gle/y3ueftpS7MkmR3fm7"   target="_blank">
     form</a>.</p>
 <p>If you&rsquo;re looking to join Brown for an <em>undergraduate or M.Sc. degree</em>, do not email the group — we do not have a say in the application process. If you&rsquo;re looking to <em>join Brown for a Ph.D.</em>, apply directly to the CS department&rsquo;s <a href="https://cs.brown.edu/degrees/doctoral/"   target="_blank">
     Ph.D. program</a>, mentioning Prof. Vasilakis in the set of the faculty members you are interested in working with; this ensures we will receive and look at your application. For postdoctoral roles, please email Prof. Vasilakis directly with your CV, two representative papers, and a short description of your background and interests.</p>
