--- a/public/team/index.html
+++ b/public/team/index.html
@@ -619,7 +619,7 @@ Building transition paths toward secure multi-scale distributed enviroments.</p>
       </div>
 </div>
 <div id="administrative-assistant" class="anchor"></div>
-<h2 class="relative group">Administrative assistant 
+<h2 class="relative group">Administrative Assistant 
     <span
         class="absolute top-0 w-6 transition-opacity opacity-0 ltr:-left-6 rtl:-right-6 not-prose group-hover:opacity-100">
         <a class="group-hover:text-primary-300 dark:group-hover:text-neutral-700"
