--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 </h2>
 
 
-<div id="gallery-1-1702325284524941000">
+<div id="gallery-1-1702328453714970000">
   
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../anirudh.jpg" alt="Anirudh Narsipur" />
@@ -577,7 +577,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../nikosv.jpg" alt="Nikos Vasilakis" />
     <strong><a href="https://nikos.vasilak.is/" title="Nikos Vasilakis">Nikos Vasilakis</a></strong> 
-    <br>Professor
+    <br>Faculty
 </div>
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../oguzhan.jpg" alt="Oğuzhan Çölkesen" />
@@ -605,7 +605,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1702325284524941000').packery({
+    $('#gallery-1-1702328453714970000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
