--- a/public/team/index.html
+++ b/public/team/index.html
@@ -686,7 +686,7 @@ Interested in parallel and distributed systems, as well as their optimization.</
        <!-- begin columns block -->
 <p><img class="imgStuffTeam" width="150" height="150" align="left" src="../zhicheng.jpg" alt="Zhicheng Huang"><p> <strong><a href="https://huangworld.github.io/"   target="_blank">
     Zhicheng Huang</a></strong><br>
-Exploring the interface between systems and sofrware engineering.</p>
+Exploring the interface between systems and software engineering.</p>
 <p><a href="mailto:zhicheng_huang@brown.edu"  >
     E-mail</a> | <a href="http://github.com/huangworld"   target="_blank">
     Github</a></p></p>
@@ -797,7 +797,7 @@ Reimagining third-party library and package ecosystems.</p>
 <a href="https://systems.ethz.ch/people/profile.MjkzNzEw.TGlzdC8zODg4LDEyOTU2NDI2OTI=.html"   target="_blank">
     Lazar Cvetković</a> (B.Sc., 2019-2020, now at ETH Zurich)  <br>
 <a href="https://www.linkedin.com/in/pranjal-goel"   target="_blank">
-    Pranjal Goel</a> (UROP, 2018-2919, now at Goldman Sachs)<br>
+    Pranjal Goel</a> (UROP, 2018-2019, now at Goldman Sachs)<br>
 <a href="https://www.linkedin.com/in/yash-palkhiwala"   target="_blank">
     Yash Palkhiwala</a> (UROP, 2017-2019, now at Flatiron Health) <br>
 <a href="https://janbielak.com/"   target="_blank">
