--- a/public/index.html
+++ b/public/index.html
@@ -552,11 +552,15 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 </h2>
 
 
-<div id="gallery-1-1706087898142461000">
+<div id="gallery-1-1706088112757911000">
   
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../anirudh.jpg" alt="Anirudh Narsipur" />
     <strong><a href="https://www.anarsipur.com/" title="Anirudh Narsipur">Anirudh Narsipur</a></strong> <br> B.Sc. student
+</div>
+<div class="gallery-item grid-w20">
+    <img class="imgStuff" src="../christina.jpg" alt="Christina Stepin" />
+    <strong><a href="https://www.linkedin.com/in/christinastepin/" title="Christina Stepin">Christina Stepin</a></strong> <br> B.Sc. student
 </div>
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../giorgos.jpg" alt="Giorgos Liargkovas" />
@@ -605,7 +609,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1706087898142461000').packery({
+    $('#gallery-1-1706088112757911000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
