--- a/public/team/index.html
+++ b/public/team/index.html
@@ -57,8 +57,8 @@
 
 
 
-  <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content=""/>
+
+  <meta name="twitter:card" content="summary"/><meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Faculty # Nikos Vasilakis Building transition paths toward secure multi-scale distributed enviroments."/>
 
   
@@ -86,7 +86,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "292"
+    "wordCount": "308"
   }]
   </script>
 
@@ -684,15 +684,21 @@ Interested in parallel and distributed systems, as well as their optimization.</
 <div class="gdoc-columns gdoc-columns--regular flex flex-gap flex-mobile-column">
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
-<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../zhicheng.jpg" alt="Zhicheng Huang"><p> <strong><a href="https://huangworld.github.io/"   target="_blank">
+<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../ramiz.jpg" alt="Ramiz Dundar"><p> <strong><a href="https://www.linkedin.com/in/ramizdundar/"   target="_blank">
+    Ramiz Dundar</a></strong><br>
+Designing and fine-tuning systems for cutting-edge hardware in the next generation.</p>
+<p><a href="mailto:ramiz_dundar@brown.edu"  >
+    E-mail</a> | <a href="https://github.com/ramizdundar"   target="_blank">
+    Github</a></p></p>
+</div>
+    <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
+      <p><img class="imgStuffTeam" width="150" height="150" align="left" src="../zhicheng.jpg" alt="Zhicheng Huang"><p> <strong><a href="https://huangworld.github.io/"   target="_blank">
     Zhicheng Huang</a></strong><br>
 Exploring the interface between systems and software engineering.</p>
 <p><a href="mailto:zhicheng_huang@brown.edu"  >
     E-mail</a> | <a href="http://github.com/huangworld"   target="_blank">
     Github</a></p></p>
 </div>
-    <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
-      </div>
 </div>
 <div id="undergaduate-students" class="anchor"></div>
 <h2 class="relative group">Undergaduate Students 
