--- a/404.html
+++ b/404.html
@@ -55,8 +55,8 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://atlas.cs.brown.edu/404.html" />
 
-  <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="404 Page not found"/>
+
+  <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Welcome Atlas Group."/>
 
   
