--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -57,8 +57,8 @@
 
 
 
-  <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content=""/>
+
+  <meta name="twitter:card" content="summary"/><meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Research with us # Research is fun — especially when it&rsquo;s collaborative."/>
 
   
@@ -634,7 +634,7 @@
 <p>Department of Computer Science<br>
 Room #555<br>
 115 Waterman Street,<br>
-Providence, RI 02912</div>
+Providence, RI 02912</p></div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
       <!-- magic separator, between columns -->
 <div id="contact" class="anchor"></div>
@@ -652,7 +652,7 @@ Administrative assistant: <a href="mailto:dtreed@cs.brown.edu"  >
 Office hours: <a href="https://calendar.google.com/calendar/embed?src=c_484613ba23b98a8c83e64a6e938462ebdb9e0750289f702235d35471c426bb44%40group.calendar.google.com&amp;ctz=America%2FNew_York"   target="_blank">
     Wed 2–3pm</a>, <a href="https://www.brown.edu/Facilities/Facilities_Management/maps/#building/WATSONCIT/HYPERLINK["   target="_blank">
     CIT 555</a> &amp; <a href="https://brown.zoom.us/j/94413500788"   target="_blank">
-    Zoom</a></div>
+    Zoom</a></p></div>
 </div>
 
 
