--- a/publications/index.html
+++ b/publications/index.html
@@ -57,8 +57,8 @@
 
 
 
-  <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content=""/>
+
+  <meta name="twitter:card" content="summary"/><meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Peer-Reviewed Conference Publications # BinWrap: Hybrid Protection Against Native Node."/>
 
   
