--- a/series/index.html
+++ b/series/index.html
@@ -57,8 +57,8 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://atlas.cs.brown.edu/series/" />
 
-  <meta name="twitter:card" content="summary"/>
-<meta name="twitter:title" content="Series"/>
+
+  <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="Series"/>
 <meta name="twitter:description" content="Welcome Atlas Group."/>
 
   
