--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 </h2>
 
 
-<div id="gallery-1-1708072210751933000">
+<div id="gallery-1-1710706537965682000">
   
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../anirudh.jpg" alt="Anirudh Narsipur" />
@@ -573,6 +573,10 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../julian.jpg" alt="Julian Dai" />
     <strong><a href="https://jdai1.github.io/" title="Julian Dai">Julian Dai</a></strong> <br> B.Sc. student
+</div>
+<div class="gallery-item grid-w20">
+    <img class="imgStuff" src="../megan.jpg" alt="Megan Zheng" />
+    <strong><a href="https://yuuu23.github.io/" title="Megan Zheng">Megan Zheng</a></strong> <br> B.Sc. student
 </div>
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../nikosp.jpg" alt="Nikos Pagonas" />
@@ -613,7 +617,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1708072210751933000').packery({
+    $('#gallery-1-1710706537965682000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
