--- a/public/team/index.html
+++ b/public/team/index.html
@@ -86,7 +86,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "308"
+    "wordCount": "319"
   }]
   </script>
 
@@ -726,12 +726,12 @@ Solving the scalability challenges of secure regeneration for real-world ecosyst
 <p><a href="mailto:julian_dai@brown.edu"  >
     E-mail</a> | <a href="http://github.com/jdai1"   target="_blank">
     Github</a></p></p>
-<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../seths.jpg" alt="Seth Sabar" /> <p> <strong><a href="https://www.linkedin.com/in/sethsabar/"   target="_blank">
-    Seth Sabar</a></strong><br>
-Working on  Bash-compliant PaSh and an associated library, libbash.</p>
-<p><a href="mailto:seth_sabar@brown.edu"  >
-    E-mail</a> | <a href="http://github.com/sethsabar"   target="_blank">
-    Github</a> </p></p>
+<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../seongheon.jpg" alt="Seong-Heon Jung" /> <p><strong><a href="https://forthoney.github.io/"   target="_blank">
+    Seong-Heon Jung</a></strong><br>
+Automatic compilation of shell scripts into Airflow DAGs.</p>
+<p><a href="mailto:seong-heon_jung@brown.edu"  >
+    E-mail</a> | <a href="http://github.com/forthoney"   target="_blank">
+    Github</a></p></p>
 </div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
       <p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../christina.jpg" alt="Christina Stepin" /> <p> <strong><a href="https://www.linkedin.com/in/christinastepin/"   target="_blank">
@@ -740,12 +740,18 @@ Working on a distributed multidimensional store for dynamic objects.</p>
 <p><a href="mailto:christina_stepin@brown.edu"  >
     E-mail</a> | <a href="http://github.com/cstepin"   target="_blank">
     Github</a></p></p>
-<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../seongheon.jpg" alt="Seong-Heon Jung" /> <p><strong><a href="https://forthoney.github.io/"   target="_blank">
-    Seong-Heon Jung</a></strong><br>
-Automatic compilation of shell scripts into Airflow DAGs.</p>
-<p><a href="mailto:seong-heon_jung@brown.edu"  >
-    E-mail</a> | <a href="http://github.com/forthoney"   target="_blank">
-    Github</a></p></p>
+<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../megan.jpg" alt="Megan Zheng" /> <p> <strong><a href="https://yuuu23.github.io/"   target="_blank">
+    Megan Zheng</a></strong><br>
+Synthesizing correct and high-performance runtime primitives.</p>
+<p><a href="mailto:megan_zheng@brown.edu"  >
+    E-mail</a> | <a href="http://github.com/YUUU23"   target="_blank">
+    Github</a> </p></p>
+<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../seths.jpg" alt="Seth Sabar" /> <p> <strong><a href="https://www.linkedin.com/in/sethsabar/"   target="_blank">
+    Seth Sabar</a></strong><br>
+Working on  Bash-compliant PaSh and an associated library, libbash.</p>
+<p><a href="mailto:seth_sabar@brown.edu"  >
+    E-mail</a> | <a href="http://github.com/sethsabar"   target="_blank">
+    Github</a> </p></p>
 </div>
 </div>
 <div id="visiting-students" class="anchor"></div>
