Updates on links & spaces
Signed-off-by: Grigoris Ntousakis <48942855+GNtousakis@users.noreply.github.com>

--- a/contact/index.html
+++ b/contact/index.html
@@ -695,7 +695,7 @@ Office hours: <a href="https://calendar.google.com/calendar/embed?src=c_484613ba
 </h2>
 <p><a href="https://cs.brown.edu/courses/csci1380/"   target="_blank">
     CS1380: Distributed Computer Systems</a><br>
-<a href="https://cs.brown.edu/courses/info/csci2952-r/"   target="_blank">
+<a href="https://cs.brown.edu/courses/csci2952r/"   target="_blank">
     CS2952-R: Systems Transforming Systems</a><br>
 <a href="https://systems.cs.brown.edu/sysread/"   target="_blank">
     Weekly systems lunchch</a></p>
