--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 </h2>
 
 
-<div id="gallery-1-1717054624221369000">
+<div id="gallery-1-1717066573501707000">
   
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../anirudh.jpg" alt="Anirudh Narsipur" />
@@ -625,7 +625,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1717054624221369000').packery({
+    $('#gallery-1-1717066573501707000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
@@ -707,7 +707,7 @@ Recent trends are pushing developers towards new paradigms of secure and scalabl
 </h2>
 <p><a href="https://cs.brown.edu/courses/csci1380/"   target="_blank">
     CS1380: Distributed Computer Systems</a><br>
-<a href="https://cs.brown.edu/courses/info/csci2952-r/"   target="_blank">
+<a href="https://cs.brown.edu/courses/csci2952r/"   target="_blank">
     CS2952-R: Systems Transforming Systems</a><br>
 <a href="https://systems.cs.brown.edu/sysread/"   target="_blank">
     Weekly systems lunch</a></p>
