--- a/public/index.html
+++ b/public/index.html
@@ -552,7 +552,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 </h2>
 
 
-<div id="gallery-1-1717066573501707000">
+<div id="gallery-1-1719410103889381000">
   
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../anirudh.jpg" alt="Anirudh Narsipur" />
@@ -580,7 +580,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 </div>
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../lukas.jpg" alt="Lukas Lazarek" />
-    <strong><a href="https://llazarek.github.io" title="Julian Dai">Lukas Lazarek</a></strong> <br> Postdoc
+    <strong><a href="https://llazarek.github.io" title="Lukas Lazarek">Lukas Lazarek</a></strong> <br> Postdoc
 </div>
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../megan.jpg" alt="Megan Zheng" />
@@ -604,12 +604,16 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
     <strong><a href="https://forthoney.github.io/" title="Seong-Heon Jung">Seong-Heon Jung</a></strong> <br> B.Sc. student
 </div>
 <div class="gallery-item grid-w20">
+    <img class="imgStuff" src="../vagos.jpg" alt="Vagos Lamprou" />
+    <strong><a href="https://vagos.github.io/" title="Vagos Lamprou">Vagos Lamprou</a></strong> <br> Visiting Student 
+</div>
+<div class="gallery-item grid-w20">
     <img class="imgStuff" src="../yuchen.jpg" alt="Yuchen Lu" />
     <strong><a href="https://www.linkedin.com/in/luyc/" title="Yuchen Lu">Yuchen Lu</a></strong> <br> Ph.D. Student 
 </div>
 <div class="gallery-item grid-w20">
-    <img class="imgStuff" src="../vagos.jpg" alt="Vagos Lamprou" />
-    <strong><a href="https://vagos.github.io/" title="Vagos Lamprou">Vagos Lamprou</a></strong> <br> Visiting Student 
+    <img class="imgStuff" src="../yutong.jpg" alt="Yutong Li" />
+    <strong><a href="https://www.linkedin.com/in/yutong-li-9315b7173/" title="Yutong Li">Yutong Li</a></strong> <br> M.Sc. Student
 </div>
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../yizheng.jpg" alt="Yizheng Xie" />
@@ -625,7 +629,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1717066573501707000').packery({
+    $('#gallery-1-1719410103889381000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
