--- a/team/index.html
+++ b/team/index.html
@@ -86,7 +86,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "355"
+    "wordCount": "369"
   }]
   </script>
 
@@ -729,11 +729,10 @@ Towards type systems for language-angostic composition of black-box software com
 <p><a href="mailto:anirudh_narsipur@brown.edu"  >
     E-mail</a> | <a href="http://github.com/AnirudhNarsipur"   target="_blank">
     Github</a></p></p>
-<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../zhicheng.jpg" alt="Zhicheng Huang"><p> <strong><a href="https://huangworld.github.io/"   target="_blank">
-    Zhicheng Huang</a></strong><br>
-Exploring the interface between systems and software engineering.</p>
-<p><a href="mailto:zhicheng_huang@brown.edu"  >
-    E-mail</a> | <a href="http://github.com/huangworld"   target="_blank">
+<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../yutong.jpg" alt="Yutong Li"><p><strong>Yutong Li</strong><br>
+Exploring the component development and interplay in large-scale systems.</p>
+<p><a href="mailto:yutong0020@gmail.com"  >
+    E-mail</a> | <a href="http://github.com/tAnother"   target="_blank">
     Github</a></p></p>
 </div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
@@ -742,6 +741,12 @@ Exploring the interface between systems and software engineering.</p>
 Designing and fine-tuning systems for cutting-edge hardware in the next generation.</p>
 <p><a href="mailto:ramiz_dundar@brown.edu"  >
     E-mail</a> | <a href="https://github.com/ramizdundar"   target="_blank">
+    Github</a></p></p>
+<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../zhicheng.jpg" alt="Zhicheng Huang"><p> <strong><a href="https://huangworld.github.io/"   target="_blank">
+    Zhicheng Huang</a></strong><br>
+Exploring the interface between systems and software engineering.</p>
+<p><a href="mailto:zhicheng_huang@brown.edu"  >
+    E-mail</a> | <a href="http://github.com/huangworld"   target="_blank">
     Github</a></p></p>
 </div>
 </div>
