--- a/public/index.html
+++ b/public/index.html
@@ -552,7 +552,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 </h2>
 
 
-<div id="gallery-1-1724880796998051000">
+<div id="gallery-1-1724881464249328000">
   
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
@@ -561,6 +561,10 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/christina.jpg" alt="Christina Stepin" />
     <strong><a href="https://www.linkedin.com/in/christinastepin/" title="Christina Stepin">Christina Stepin</a></strong> <br> B.Sc. student
+</div>
+<div class="gallery-item grid-w20">
+    <img class="imgStuff" src="../profile_pictures/di.jpg" alt="Di Jin" />
+    <strong><a href="https://sleepymug.me" title="Di Jin">Di Jin</a></strong> <br> Postdoc
 </div>
 <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/ethan.jpg" alt="Ethan Lavi" />
@@ -629,7 +633,7 @@ Jun'23: <a href="https://nikos.vasilak.is/p/binwrap:asiaccs:2023.pdf"   target="
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1724880796998051000').packery({
+    $('#gallery-1-1724881464249328000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
