--- a/team/index.html
+++ b/team/index.html
@@ -86,7 +86,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "369"
+    "wordCount": "380"
   }]
   </script>
 
@@ -652,15 +652,21 @@ Building transition paths toward secure multi-scale distributed enviroments.</p>
 <div class="gdoc-columns gdoc-columns--regular flex flex-gap flex-mobile-column">
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
        <!-- begin columns block -->
-<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/lukas.jpg" alt="Lukas Lazarek"> <p> <strong><a href="https://llazarek.github.io"   target="_blank">
+<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/di.jpg" alt=""> <p> <strong><a href="https://sleepymug.me"   target="_blank">
+    Di Jin</a></strong><br>
+Making software security approachable and scalable.</p>
+<p><a href="mailto:di_jin@brown.edu"  >
+    E-mail</a> | <a href="http://github.com/sleepymug"   target="_blank">
+    Github</a></p></p>
+</div>
+    <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
+      <p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/lukas.jpg" alt="Lukas Lazarek"> <p> <strong><a href="https://llazarek.github.io"   target="_blank">
     Lukas Lazarek</a></strong><br>
-Exploring which language-systems features are practically useful</p>
+Exploring which language-systems features are practically useful.</p>
 <p><a href="mailto:lukas_lazarek@brown.edu"  >
     E-mail</a> | <a href="http://github.com/llazarek"   target="_blank">
     Github</a></p></p>
 </div>
-    <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
-      </div>
 </div>
 <div id="phd-students" class="anchor"></div>
 <h2 class="relative group">Ph.D. Students 
