--- a/404.html
+++ b/404.html
@@ -55,8 +55,8 @@
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://atlas.cs.brown.edu/404.html" />
 
-
-  <meta name="twitter:card" content="summary"/><meta name="twitter:title" content="404 Page not found"/>
+  <meta name="twitter:card" content="summary"/>
+<meta name="twitter:title" content="404 Page not found"/>
 <meta name="twitter:description" content="Welcome Atlas Group."/>
 
   
@@ -497,7 +497,7 @@
     
     
     <p class="text-sm">
-      © ATLAS Group 2023 | <a href="https://systems.cs.brown.edu"   target="_blank">
+      © ATLAS Group 2024 | <a href="https://systems.cs.brown.edu"   target="_blank">
     Brown Systems Group</a> | <a href="https://www.brown.edu/"   target="_blank">
     Brown University</a>
     </p>
