--- a/contact/index.html
+++ b/contact/index.html
@@ -57,8 +57,8 @@
 
 
 
-
-  <meta name="twitter:card" content="summary"/><meta name="twitter:title" content=""/>
+  <meta name="twitter:card" content="summary"/>
+<meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Research with us # Research is fun — especially when it&rsquo;s collaborative."/>
 
   
@@ -637,7 +637,7 @@
 <p>Department of Computer Science<br>
 Room #555<br>
 115 Waterman Street,<br>
-Providence, RI 02912</p></div>
+Providence, RI 02912</div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
       <!-- magic separator, between columns -->
 <div id="contact" class="anchor"></div>
@@ -655,7 +655,7 @@ Administrative assistant: <a href="mailto:dtreed@cs.brown.edu"  >
 Office hours: <a href="https://calendar.google.com/calendar/embed?src=c_484613ba23b98a8c83e64a6e938462ebdb9e0750289f702235d35471c426bb44%40group.calendar.google.com&amp;ctz=America%2FNew_York"   target="_blank">
     Wed 2–3pm</a>, <a href="https://www.brown.edu/Facilities/Facilities_Management/maps/#building/WATSONCIT/HYPERLINK["   target="_blank">
     CIT 555</a> &amp; <a href="https://brown.zoom.us/j/94413500788"   target="_blank">
-    Zoom</a></p></div>
+    Zoom</a></div>
 </div>
 
 
@@ -763,7 +763,7 @@ Organizations: <a href="https://dsi.brown.edu/"   target="_blank">
     
     
     <p class="text-sm">
-      © ATLAS Group 2023 | <a href="https://systems.cs.brown.edu"   target="_blank">
+      © ATLAS Group 2024 | <a href="https://systems.cs.brown.edu"   target="_blank">
     Brown Systems Group</a> | <a href="https://www.brown.edu/"   target="_blank">
     Brown University</a>
     </p>
