--- a/publications/index.html
+++ b/publications/index.html
@@ -57,8 +57,8 @@
 
 
 
-
-  <meta name="twitter:card" content="summary"/><meta name="twitter:title" content=""/>
+  <meta name="twitter:card" content="summary"/>
+<meta name="twitter:title" content=""/>
 <meta name="twitter:description" content="Peer-Reviewed Conference Publications # BinWrap: Hybrid Protection Against Native Node."/>
 
   
@@ -912,7 +912,7 @@ Orestis Akribopoulos, Dimitrios Bousis, Dionysios Efstathiou, Haris Koutsouridis
     
     
     <p class="text-sm">
-      © ATLAS Group 2023 | <a href="https://systems.cs.brown.edu"   target="_blank">
+      © ATLAS Group 2024 | <a href="https://systems.cs.brown.edu"   target="_blank">
     Brown Systems Group</a> | <a href="https://www.brown.edu/"   target="_blank">
     Brown University</a>
     </p>
