--- a/team/index.html
+++ b/team/index.html
@@ -86,7 +86,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "409"
+    "wordCount": "422"
   }]
   </script>
 
@@ -749,6 +749,12 @@ Exploring the component development and interplay in large-scale systems.</p>
 <p><a href="mailto:yutong0020@gmail.com"  >
     E-mail</a> | <a href="http://github.com/tAnother"   target="_blank">
     Github</a></p></p>
+<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/zhicheng.jpg" alt="Zhicheng Huang"><p> <strong><a href="https://huangworld.github.io/"   target="_blank">
+    Zhicheng Huang</a></strong><br>
+Exploring the interface between systems and software engineering.</p>
+<p><a href="mailto:zhicheng_huang@brown.edu"  >
+    E-mail</a> | <a href="http://github.com/huangworld"   target="_blank">
+    Github</a></p></p>
 </div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
       <p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/ramiz.jpg" alt="Ramiz Dundar"><p> <strong><a href="https://www.linkedin.com/in/ramizdundar/"   target="_blank">
@@ -757,11 +763,10 @@ Designing and fine-tuning systems for cutting-edge hardware in the next generati
 <p><a href="mailto:ramiz_dundar@brown.edu"  >
     E-mail</a> | <a href="https://github.com/ramizdundar"   target="_blank">
     Github</a></p></p>
-<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/zhicheng.jpg" alt="Zhicheng Huang"><p> <strong><a href="https://huangworld.github.io/"   target="_blank">
-    Zhicheng Huang</a></strong><br>
-Exploring the interface between systems and software engineering.</p>
-<p><a href="mailto:zhicheng_huang@brown.edu"  >
-    E-mail</a> | <a href="http://github.com/huangworld"   target="_blank">
+<p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/zekai.jpg" alt="Zekai Li"><p><strong>Zekai Li</strong><br>
+Exploring formal methods and how AI enhances them.</p>
+<p><a href="mailto:zekai_li@brown.edu"  >
+    E-mail</a> | <a href="http://github.com/spanning-tree"   target="_blank">
     Github</a></p></p>
 </div>
 </div>
