Update news and team

--- a/public/index.html
+++ b/public/index.html
@@ -516,7 +516,12 @@
             style="text-decoration-line: none !important;" href="#news" aria-label="Anchor">#</a></span>        
     
 </h2>
-<p>Apr'25: <a href="https://forms.gle/zL2giouQjeKyfcGR6"   target="_blank">
+<p>Jul'25: <a href="https://vagos.lamprou.xyz/"   target="_blank">
+    Evangelos Lamprou</a> joins the group for his PhD!  <br>
+Jun'25: Our paper on the <a href="https://kben.sh/"   target="_blank">
+    Koala benchmark for the shells</a> was accepted at Usenix <a href="https://www.usenix.org/conference/atc25/presentation/lamprou"   target="_blank">
+    ATC'25</a>&mdash;the last one, ever!<br>
+Apr'25: <a href="https://forms.gle/zL2giouQjeKyfcGR6"   target="_blank">
     Apply</a> to attend the <a href="https://brown-systems-week.github.io/"   target="_blank">
     Brown Systems Week 2025</a>!<br>
 Mar'25: Our paper on <a href="https://nikos.vasilak.is/p/sash:hotos:2025.pdf"   target="_blank">
@@ -559,7 +564,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 </h2>
 
 
-<div id="gallery-1-1746140007575390000">
+<div id="gallery-1-1750268060481894000">
   
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
@@ -648,7 +653,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1746140007575390000').packery({
+    $('#gallery-1-1750268060481894000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
