--- a/public/team/index.html
+++ b/public/team/index.html
@@ -86,7 +86,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "360"
+    "wordCount": "351"
   }]
   </script>
 
@@ -692,13 +692,13 @@ Interested in principled and provably correct abstractions. Co-advised by <a hre
     Github</a></p></p>
 <p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/vagos.jpg" alt="Evangelos Lamprou" /> <p> <strong><a href="https://vagos.lamprou.xyz/"   target="_blank">
     Evangelos Lamprou</a></strong><br>
-Interested in distributed systems,  LLMs, and beyond.   </p>
+Interested in distributed systems, LLMs, and beyond.   </p>
 <p><a href="mailto:vagos@lamprou.xyz"  >
     E-mail</a> | <a href="http://github.com/vagos"   target="_blank">
     Github</a></p></p>
 <p><img class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/oguzhan.jpg" alt="Oğuzhan Çölkesen"> <p><strong><a href="https://www.oguzhancolkesen.com"   target="_blank">
     Oğuzhan Çölkesen</a></strong><br>
-Interested in parallel and distributed systems, as well as their optimization.</p>
+Interested in parallel and distributed systems, as well as their optimization.   </p>
 <p><a href="mailto:oguzhan@brown.edu"  >
     E-mail</a> | <a href="http://github.com/ocolkesen"   target="_blank">
     Github</a></p></p>
@@ -814,16 +814,12 @@ At DTU; Intersted in distributed systems,  LLMs, and beyond.
     Ramiz Dundar</a> (M.Sc., 2025, next: Google)<br>
 <a href="https://huangworld.github.io/"   target="_blank">
     Zhicheng Huang</a> (M.Sc., 2025, next: University of California San Diego)<br>
+<a href="anarsipur.com"  >
+    Anirudh Narsipur</a> (M.Sc., 2025, next: Evolver)<br>
 <a href="https://yoghurtina.github.io/"   target="_blank">
     Ioanna Gemou</a> (Visiting Student, 2025, next: Brown University)<br>
 <a href="https://forthoney.github.io/"   target="_blank">
     Seong-Heon Jung</a> (B.Sc., 2025, next: New York University)<br>
-<a href="anarsipur.com"  >
-    Anirudh Narsipur</a> (M.Sc., 2025, next:)<br>
-<a href="https://www.linkedin.com/in/christinastepin/"   target="_blank">
-    Christina Stepin</a> (B.Sc., 2025, next:)<br>
-<a href="http://github.com/tAnother"   target="_blank">
-    Yutong Li</a> (B.Sc., 2024, next:)<br>
 <a href="https://www.linkedin.com/in/sethsabar/"   target="_blank">
     Seth Sabar</a> (UROP, 2024, next: The Voleon Group)<br>
 <a href="https://nikpag.github.io/"   target="_blank">
