--- a/index.html
+++ b/index.html
@@ -516,7 +516,10 @@
             style="text-decoration-line: none !important;" href="#news" aria-label="Anchor">#</a></span>        
     
 </h2>
-<p>Jul'25: <a href="https://vagos.lamprou.xyz/"   target="_blank">
+<p>Jul'25: Our group received a <a href="https://blog.google/products/google-cloud/ml-systems-junior-faculty-awards/"   target="_blank">
+    Google ML-and-Systems Junior Faculty</a> Award on <a href="https://atlas.cs.brown.edu/supply-chain/"   target="_blank">
+    Securing Open-Source Software</a>!<br>
+Jul'25: <a href="https://vagos.lamprou.xyz/"   target="_blank">
     Evangelos Lamprou</a> joins the group for his PhD!  <br>
 Jun'25: Our paper on the <a href="https://kben.sh/"   target="_blank">
     Koala benchmark for the shells</a> was accepted at Usenix <a href="https://www.usenix.org/conference/atc25/presentation/lamprou"   target="_blank">
@@ -564,7 +567,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 </h2>
 
 
-<div id="gallery-1-1750363852233163000">
+<div id="gallery-1-1751466947290513000">
   
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
@@ -653,7 +656,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1750363852233163000').packery({
+    $('#gallery-1-1751466947290513000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
