--- a/index.html
+++ b/index.html
@@ -516,14 +516,16 @@
             style="text-decoration-line: none !important;" href="#news" aria-label="Anchor">#</a></span>        
     
 </h2>
-<p>Jul'25: Our group received a <a href="https://blog.google/products/google-cloud/ml-systems-junior-faculty-awards/"   target="_blank">
-    Google ML-and-Systems Junior Faculty</a> Award on <a href="https://atlas.cs.brown.edu/supply-chain/"   target="_blank">
-    Securing Open-Source Software</a>!<br>
-Jul'25: <a href="https://vagos.lamprou.xyz/"   target="_blank">
-    Evangelos Lamprou</a> joins the group for his PhD!  <br>
-Jun'25: Our paper on the <a href="https://kben.sh/"   target="_blank">
-    Koala benchmark for the shells</a> was accepted at Usenix <a href="https://www.usenix.org/conference/atc25/presentation/lamprou"   target="_blank">
-    ATC'25</a>&mdash;the last one, ever!<br>
+<p>Aug'25: <a href="https://vagos.lamprou.xyz"   target="_blank">
+    Evangelos Lamprou</a> joins BrownCS and the group for his PhD!  <br>
+Jul'25: <a href="https://nikos.vasilak.is"   target="_blank">
+    Nikos Vasilakis</a> received a <a href="https://blog.google/products/google-cloud/ml-systems-junior-faculty-awards/"   target="_blank">
+    Google ML-and-Systems Junior Faculty Award</a>!<br>
+Jun'25: <a href="https://nikos.vasilak.is/p/koala:atc:2025.pdf"   target="_blank">
+    Our paper</a> on the <a href="https://kben.sh/"   target="_blank">
+    Koala benchmarks for the shell</a> was accepted at Usenix <a href="https://www.usenix.org/conference/atc25/presentation/lamprou"   target="_blank">
+    ATC'25</a>&mdash;the <a href="https://www.usenix.org/blog/usenix-atc-announcement"   target="_blank">
+    last one</a>, <em>ever</em>!<br>
 Apr'25: <a href="https://forms.gle/zL2giouQjeKyfcGR6"   target="_blank">
     Apply</a> to attend the <a href="https://brown-systems-week.github.io/"   target="_blank">
     Brown Systems Week 2025</a>!<br>
@@ -567,7 +569,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 </h2>
 
 
-<div id="gallery-1-1751466947290513000">
+<div id="gallery-1-1751530617432539000">
   
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
@@ -656,7 +658,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1751466947290513000').packery({
+    $('#gallery-1-1751530617432539000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
