--- a/team/index.html
+++ b/team/index.html
@@ -86,7 +86,7 @@
     
     
     "mainEntityOfPage": "true",
-    "wordCount": "351"
+    "wordCount": "350"
   }]
   </script>
 
@@ -774,11 +774,18 @@ Synthesizing correct and high-performance runtime primitives.</p>
     Github</a> </p></p>
 </div>
     <div class="gdoc-columns__content gdoc-markdown--nested flex-even">
-      <p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/julian.jpg" alt="Julian Dai" /> <p> <strong><a href="https://jdai1.github.io/"   target="_blank">
-    Julian Dai</a></strong><br>
-Solving the scalability challenges of secure regeneration for real-world ecosystems.</p>
-<p><a href="mailto:julian_dai@brown.edu"  >
-    E-mail</a> | <a href="http://github.com/jdai1"   target="_blank">
+      <!--- ## Eliminating Julian 
+<img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/julian.jpg" alt="Julian Dai" /> <p> __[Julian Dai](https://jdai1.github.io/)__\
+Solving the scalability challenges of secure regeneration for real-world ecosystems.
+
+[E-mail](mailto:julian_dai@brown.edu) | [Github](http://github.com/jdai1)</p>
+
+-->
+<p><img  class="imgStuffTeam" width="150" height="150" align="left" src="../profile_pictures/atharv.jpg" alt="Atharv Chowdhary" /> <p> <strong><a href="https://achowd32.github.io/"   target="_blank">
+    Atharv Chowdhary</a></strong><br>
+Bridging the gap between machine learning and computer systems.</p>
+<p><a href="mailto:atharv_chowdhary@brown.edu"  >
+    E-mail</a> | <a href="https://github.com/achowd32"   target="_blank">
     Github</a></p></p>
 </div>
 </div>
