--- a/publications/index.html
+++ b/publications/index.html
@@ -601,11 +601,11 @@
             style="text-decoration-line: none !important;" href="#peer-reviewed-conference-publications" aria-label="Anchor">#</a></span>        
     
 </h2>
-<p>Fractal: Fault-Tolerant Shell-Script Distribution <br>
+<p><strong>Fractal: Fault-Tolerant Shell-Script Distribution</strong> <br>
 Zhicheng Huang, Ramiz Dundar, Yizheng Xie, Konstantinos Kallas, Nikos Vasilakis. <em>23rd USENIX Symposium on Networked Systems Design and Implementation (NSDI'26)</em> <br>
 PDF <em>(coming)</em> | <a href="https://github.com/binpash/fractal"   target="_blank">
     code</a></p>
-<p>Slowpoke: End-to-end Throughput Optimization Modeling for Microservice Applications <br>
+<p><strong>Slowpoke: End-to-end Throughput Optimization Modeling for Microservice Applications</strong> <br>
 Yizheng Xie, Di Jin, Oğuzhan Çölkesen, Vasiliki Kalavri, John Liagouris, Nikos Vasilakis. <em>23rd USENIX Symposium on Networked Systems Design and Implementation (NSDI'26)</em> <br>
 PDF <em>(coming)</em> | <a href="https://github.com/atlas-brown/slowpoke"   target="_blank">
     code</a></p>
