Update news in main page

--- a/index.html
+++ b/index.html
@@ -516,8 +516,14 @@
             style="text-decoration-line: none !important;" href="#news" aria-label="Anchor">#</a></span>        
     
 </h2>
-<p>Aug'25: <a href="https://vagos.lamprou.xyz"   target="_blank">
+<p>Aug'25: Two <a href="https://www.usenix.org/conference/nsdi26"   target="_blank">
+    NSDI'26</a> papers on optimization prediction and fault tolerance for opaque distributed systems!<br>
+Aug'25: <a href="https://vagos.lamprou.xyz"   target="_blank">
     Evangelos Lamprou</a> joins BrownCS and the group for his PhD!  <br>
+Jul'25: Our <a href="https://nikos.vasilak.is/p/koala:atc:2025.pdf"   target="_blank">
+    benchmark suite for the shell</a> received the <a href="https://www.usenix.org/conferences/best-papers"   target="_blank">
+    Best Paper Award</a> at <a href="https://www.usenix.org/conference/atc25"   target="_blank">
+    USENIX ATC'25</a>!<br>
 Jul'25: <a href="https://nikos.vasilak.is"   target="_blank">
     Nikos Vasilakis</a> received a <a href="https://blog.google/products/google-cloud/ml-systems-junior-faculty-awards/"   target="_blank">
     Google ML-and-Systems Junior Faculty Award</a>!<br>
@@ -569,7 +575,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 </h2>
 
 
-<div id="gallery-1-1755756419051402000">
+<div id="gallery-1-1756137182264701000">
   
 <!-- <div class="gallery-item grid-w20">
     <img class="imgStuff" src="../profile_pictures/anirudh.jpg" alt="Anirudh Narsipur" />
@@ -673,7 +679,7 @@ Jun'24: <a href="https://yoghurtina.github.io/"   target="_blank">
 
 <script>
   $(window).on("load", function () {
-    $('#gallery-1-1755756419051402000').packery({
+    $('#gallery-1-1756137182264701000').packery({
       percentPosition: true,
       gutter: 5,
       resize: true
